Relax AV1 codec string checks to conform to current spec.

It's unclear if this was wrong originally or later relaxed, but the
spec certainly says that the chroma_sample_position may be 0 at
any time.

BUG=878922
TEST=updated tests.

Change-Id: Ib39424a3e2b620a7650eb5bd9d9b4dee65f8edf6
Reviewed-on: https://chromium-review.googlesource.com/1196164
Reviewed-by: Tom Finegan <tomfinegan@chromium.org>
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587427}
Former-commit-id: 5a72f22228f14e9b362cbae7113c5190961deda6